[gd_scene load_steps=51 format=3 uid="uid://dgyaxcfmcseek"]

[ext_resource type="Script" path="res://Game/player.gd" id="1_75war"]
[ext_resource type="Texture2D" uid="uid://ciwha02jt854a" path="res://testss.png" id="2_7yrue"]
[ext_resource type="Texture2D" uid="uid://btymhone0tidm" path="res://testvfxss@2x.png" id="2_nc3th"]
[ext_resource type="Script" path="res://Game/Other/gestureRecog.gd" id="4_udhv3"]
[ext_resource type="Script" path="res://Game/hit_detector.gd" id="5_ew3k5"]
[ext_resource type="FontFile" uid="uid://b8jarpe87jnne" path="res://Assets/Fonts/white_rabbit/whitrabt.ttf" id="5_pn2lt"]
[ext_resource type="Texture2D" uid="uid://c2vmqt3illyoe" path="res://Assets/Temp/pcache_back.png" id="6_e4rd8"]
[ext_resource type="Shader" path="res://Assets/Shaders/pbar.gdshader" id="7_qndc8"]
[ext_resource type="Texture2D" uid="uid://dyelnum8777oe" path="res://Assets/Temp/pcache_fill.png" id="8_3aoj4"]
[ext_resource type="Script" path="res://Game/txtprogressbar.gd" id="9_d2it6"]
[ext_resource type="Texture2D" uid="uid://djdpv1l4374xl" path="res://Assets/Temp/cooldown_back.png" id="10_edhwv"]
[ext_resource type="Texture2D" uid="uid://bqx5trm0iullw" path="res://Assets/Temp/cooldown_fill.png" id="11_kb5rs"]
[ext_resource type="Texture2D" uid="uid://ci1wy6dekujgw" path="res://Assets/Temp/circle_guide.png" id="12_bum1a"]
[ext_resource type="Script" path="res://Game/tracker.gd" id="13_cb3h4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pxs6c"]
atlas = ExtResource("2_nc3th")
region = Rect2(0, 21, 40, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ra6c"]
atlas = ExtResource("2_nc3th")
region = Rect2(40, 21, 40, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_km105"]
atlas = ExtResource("2_nc3th")
region = Rect2(80, 21, 40, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_va4os"]
atlas = ExtResource("2_nc3th")
region = Rect2(120, 21, 40, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynivx"]
atlas = ExtResource("2_nc3th")
region = Rect2(160, 21, 40, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkodn"]
atlas = ExtResource("2_nc3th")
region = Rect2(200, 21, 40, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_cf8ks"]
atlas = ExtResource("2_nc3th")
region = Rect2(240, 21, 40, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2i76"]
atlas = ExtResource("2_nc3th")
region = Rect2(280, 21, 40, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcwm2"]
atlas = ExtResource("2_nc3th")
region = Rect2(0, 0, 40, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pk02"]
atlas = ExtResource("2_nc3th")
region = Rect2(40, 0, 40, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_lov2b"]
atlas = ExtResource("2_nc3th")
region = Rect2(80, 0, 40, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_skbrl"]
atlas = ExtResource("2_nc3th")
region = Rect2(120, 0, 40, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5j5m"]
atlas = ExtResource("2_nc3th")
region = Rect2(160, 0, 40, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_nd1yd"]
atlas = ExtResource("2_nc3th")
region = Rect2(200, 0, 40, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_kiawb"]
atlas = ExtResource("2_nc3th")
region = Rect2(240, 0, 40, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_it0ya"]
atlas = ExtResource("2_nc3th")
region = Rect2(280, 0, 40, 21)

[sub_resource type="SpriteFrames" id="SpriteFrames_rw0km"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxs6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ra6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_km105")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_va4os")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynivx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkodn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cf8ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2i76")
}],
"loop": true,
"name": &"bottomSPIN",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcwm2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pk02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lov2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skbrl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5j5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nd1yd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kiawb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_it0ya")
}],
"loop": true,
"name": &"topSPIN",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_1n8ow"]
atlas = ExtResource("2_7yrue")
region = Rect2(40, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_faoe2"]
atlas = ExtResource("2_7yrue")
region = Rect2(40, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_o85xr"]
atlas = ExtResource("2_7yrue")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_efi14"]
atlas = ExtResource("2_7yrue")
region = Rect2(0, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_7t8pv"]
atlas = ExtResource("2_7yrue")
region = Rect2(40, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_djtoq"]
atlas = ExtResource("2_7yrue")
region = Rect2(80, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_una7o"]
atlas = ExtResource("2_7yrue")
region = Rect2(0, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_jaqjo"]
atlas = ExtResource("2_7yrue")
region = Rect2(40, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdav2"]
atlas = ExtResource("2_7yrue")
region = Rect2(80, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxwj"]
atlas = ExtResource("2_7yrue")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1igc"]
atlas = ExtResource("2_7yrue")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_50fg8"]
atlas = ExtResource("2_7yrue")
region = Rect2(80, 0, 40, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_652lt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1n8ow")
}],
"loop": true,
"name": &"IdleForward",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_faoe2")
}],
"loop": true,
"name": &"IdleSide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o85xr")
}],
"loop": true,
"name": &"IdleTilt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_efi14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7t8pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djtoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7t8pv")
}],
"loop": true,
"name": &"MoveForward",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_una7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jaqjo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdav2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jaqjo")
}],
"loop": true,
"name": &"MoveSide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxwj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1igc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50fg8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1igc")
}],
"loop": true,
"name": &"MoveTilt",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_w7mlu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h07ks"]
radius = 20.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kpsq6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cjmnd"]
shader = ExtResource("7_qndc8")
shader_parameter/value = 0.5
shader_parameter/smooth_size = 0.2
shader_parameter/color = Color(0.94902, 0.713726, 0.239216, 1)
shader_parameter/mask = ExtResource("8_3aoj4")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_65b6y"]
shader = ExtResource("7_qndc8")
shader_parameter/value = 1.0
shader_parameter/smooth_size = 0.2
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/mask = ExtResource("11_kb5rs")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cfeeq"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
motion_mode = 1
script = ExtResource("1_75war")

[node name="topSpinVFX" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -5)
sprite_frames = SubResource("SpriteFrames_rw0km")
animation = &"topSPIN"
speed_scale = 6.0
offset = Vector2(0, -14)

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_652lt")
animation = &"IdleTilt"
speed_scale = 2.0
offset = Vector2(0, -14)

[node name="bottomSpinVFX" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 15)
sprite_frames = SubResource("SpriteFrames_rw0km")
animation = &"bottomSPIN"
speed_scale = 6.0
offset = Vector2(0, -14)

[node name="Gesture" type="Node2D" parent="."]
script = ExtResource("4_udhv3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_w7mlu")

[node name="HitDetector" type="Area2D" parent="."]
script = ExtResource("5_ew3k5")
hd_for = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitDetector"]
visible = false
position = Vector2(0, -12)
shape = SubResource("CircleShape2D_h07ks")
debug_color = Color(0, 0.0823529, 0.701961, 0.419608)

[node name="Sight" type="RayCast2D" parent="."]
collision_mask = 7

[node name="UI" type="CanvasLayer" parent="."]

[node name="Stats" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="pCacheBar" type="PanelContainer" parent="UI/Stats"]
modulate = Color(1, 1, 1, 0.2)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -180.0
offset_right = 320.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_kpsq6")
script = ExtResource("9_d2it6")
value = 50.0

[node name="back" type="TextureRect" parent="UI/Stats/pCacheBar"]
layout_mode = 2
texture = ExtResource("6_e4rd8")

[node name="fill" type="TextureRect" parent="UI/Stats/pCacheBar"]
material = SubResource("ShaderMaterial_cjmnd")
layout_mode = 2
texture = ExtResource("8_3aoj4")

[node name="pCooldownBar" type="PanelContainer" parent="UI/Stats"]
modulate = Color(1, 1, 1, 0.2)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -180.0
offset_right = 320.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_kpsq6")
script = ExtResource("9_d2it6")
invert = true
p_transition = 4
p_transition_time = 0.01

[node name="back" type="TextureRect" parent="UI/Stats/pCooldownBar"]
layout_mode = 2
texture = ExtResource("10_edhwv")

[node name="fill" type="TextureRect" parent="UI/Stats/pCooldownBar"]
material = SubResource("ShaderMaterial_65b6y")
layout_mode = 2
texture = ExtResource("11_kb5rs")

[node name="Tracker" type="Control" parent="UI/Stats" node_paths=PackedStringArray("player")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("13_cb3h4")
player = NodePath("../../..")

[node name="Panel" type="Panel" parent="UI/Stats/Tracker"]
modulate = Color(1, 1, 1, 0.101961)
custom_minimum_size = Vector2(5, 5)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.5
offset_top = -100.0
offset_right = 2.5
offset_bottom = -95.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cfeeq")

[node name="Guide" type="TextureRect" parent="UI/Stats"]
visible = false
modulate = Color(1, 1, 1, 0.101961)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("12_bum1a")

[node name="MarginContainer" type="MarginContainer" parent="UI/Stats"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Stats/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="sCache" type="RichTextLabel" parent="UI/Stats/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("5_pn2lt")
theme_override_fonts/bold_font = ExtResource("5_pn2lt")
theme_override_font_sizes/normal_font_size = 15
theme_override_font_sizes/bold_font_size = 10
bbcode_enabled = true
text = "2.35[b]ghz"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Charge" type="ProgressBar" parent="UI/Stats/MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(100, 10)
layout_mode = 2
value = 50.0
show_percentage = false

[node name="Cooldown" type="ProgressBar" parent="UI/Stats/MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(100, 5)
layout_mode = 2
value = 50.0
show_percentage = false
